# duong-sat

./: .env.host.example  .env.local.example  .gitignore  README  README.md  bao-cao-chuc-nang-admin-user-2026-04-03.xlsx  crawler.toml  pyproject.toml  render.yaml  start-backend.ps1  sync-host-db.ps1
data/: active-db.txt  crossings_template.csv  dem_sample_bien_hoa.json  osm_sample_bien_hoa.osm  railway.db
docs/: BACKLOG.md  HANDOFF.md  RULES.md  SKILLS.md  threejs-3d-architecture.md
frontend/: .env.development  .env.production  index.html  package-lock.json  package.json  vite.config.js
frontend/public/assets/scene3d/: poly_tower_page.html  transmission_tower.glb
frontend/src/: api.js  main.js  router.js  styles.css
frontend/src/components/: CoordinatePickerMap.vue  MapPanel.vue  MetricCards.vue  Scene3DCanvas.vue
frontend/src/layouts/: AdminLayout.vue  PublicLayout.vue
frontend/src/pages/: AdminArticlesPage.vue  AdminCrossingsPage.vue  AdminDashboardPage.vue  AdminIncidentsPage.vue  AdminLoginPage.vue  AdminSchedulesPage.vue  AdminUsersPage.vue  PublicCrossingDetailPage.vue  PublicDirectoryPage.vue  PublicInsightsPage.vue  PublicMapPage.vue  PublicThreeScenePage.vue
frontend/src/shared/: EntityCrudPanel.vue
frontend/src/stores/: adminData.js  auth.js  publicData.js
frontend/src/utils/: publicHelpers.js
src/railway_crawler/: api.py  cli.py  config.py  db.py  news.py  real_data.py  risk.py  scene3d.py  schedule.py  seed.py
