[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "railway-risk-crawler"
version = "0.1.0"
description = "Crawler and risk aggregation tool for railway crossings in Bien Hoa."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12.3",
  "fastapi>=0.115.12",
  "googlenewsdecoder>=0.1.7",
  "numpy>=1.26.4",
  "pydantic>=2.0.0",
  "python-multipart>=0.0.9",
  "requests>=2.32.3",
  "tifffile>=2026.3.3",
  "uvicorn>=0.34.0",
]

[project.scripts]
railway-crawler = "railway_crawler.cli:main"
railway-api = "railway_crawler.api:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
